--- a/01.querydsl.md
+++ b/01.querydsl.md
@@ -15,6 +15,11 @@
     - [2.3.4. Group By 최적화](#234-group-by-최적화)
     - [2.3.5. 커버링 인덱스](#235-커버링-인덱스)
       - [2.3.5.1. 커버링 인덱스 조회는 나눠서 진행](#2351-커버링-인덱스-조회는-나눠서-진행)
+- [3. 성능개선(UPDATE/INSERT)](#3-성능개선updateinsert)
+  - [3.1. 일괄 Update 최적화](#31-일괄-update-최적화)
+  - [3.2 Bulk Insert](#32-bulk-insert)
+  - [3.2.1. EntityQL 단점](#321-entityql-단점)
+- [4. 마무리](#4-마무리)
 
 > [우아콘2020] 수십억 row에서 Querydsl 사용하기
 
@@ -198,3 +203,54 @@ return queryFactory
         .fetch()
 
 ```
+
+# 3. 성능개선(UPDATE/INSERT)
+
+## 3.1. 일괄 Update 최적화
+> DrityChecking
+```java
+List<Student> students = queryFactory
+            .selectFrom(student)
+            .where(student.id.loe(studentId))
+            .fetch();
+
+for(Student student : students) {
+    student.updateName(name);
+}
+```
+- 트랜잭션 내부에 있을 때 엔티티를 조회해서 해당 엔티티 값을 수정하는 것
+- 무분별한 DrityChecking 꼭 확인 필요
+- querydsl 일괄 업데이트에 비해 성능이 많이 떨어진다.
+- `문제점` : 하이버네이트 캐시는 일괄 업데이트시 캐시 갱신이 안됨. 이럴 경우엔 업데이트 대상들에 대한 Cache Eviction이 필요.
+- 실시간 비지니스처리, 실시간 단건 처리시
+
+> Querydsl.update
+- 대량의 데이터를 일괄 Update 처리시
+
+```java
+queryFactory
+        .update(student)
+        .where(student.id.loe(studentId))
+        .set(stduent.name, name)
+        .execute();
+```
+
+## 3.2 Bulk Insert
+JPA로 Bulk Insert 자제한다.
+- jpa.merge, jpa.persist
+- JPA는 auto_imcrement일 때 insert 합치기가 적용되지 않는다. 
+- JPA Bulk insert < JdbcTemplate (성능 이슈)
+- `JdbcTemplate`으로 Bulk Insert는 처리되나, 컴파일 체크, 코드-테이블간의 불일치 체크 Type Safe
+- Querydsl != Querydsl-JPA
+- EntityQL로 만들어진 Querydsl-sql를 사용한다.
+
+## 3.2.1. EntityQL 단점
+- gradle 5이상 필요
+- 어노테이션에서 (name="") 필수
+- primitive type 사용 할 수 없다.
+- 복잡한 설정
+- @Embedded 미지원
+
+# 4. 마무리
+1. 상황에 따라 ORM / 전통적 query 방식을 골라 사용할 것
+2. JPA / QueryDsl로 발생하는 쿼리 한번 더 확인하기
